# WolfsDoomViewer

./: .gitignore  CMakeLists.txt  LICENSE
include/: blockmap.h  bsp_node.h  constants.h  doom_map.hpp  generic_exception.hpp  line.h  linedefs.h  map_types.h  rejects.h  sector.h  segs.h  sidedefs.h  subsector.h  things.h  vertex.h  wad.h  wad.hpp
source/: doom_map.cxx  doom_map.i  test.cxx  wad.cxx
