cmake_minimum_required(VERSION 3.25)
project(WolfsDoom VERSION 0.1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
find_package(SDL2 REQUIRED)
find_package(SDL2_gfx REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(Boost COMPONENTS iostreams filesystem REQUIRED)
file(GLOB SOURCES "source/*.cxx")
add_executable(WolfsDoom ${SOURCES})
target_link_libraries(WolfsDoom SDL2::Main SDL2::GFX SDL2::TTF)
target_link_libraries(WolfsDoom ${Boost_LIBRARIES})
target_include_directories(WolfsDoom PRIVATE include)
